// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots QuestionChoice Default 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        },
      ]
    }
    testID="question-choice-1"
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingLeft": 16,
            "paddingRight": 8,
            "paddingVertical": 24,
          },
          false,
          false,
        ]
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 15,
                  "fontWeight": "700",
                }
              }
            >
              Option 1
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots QuestionChoice Disabled 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        },
      ]
    }
    testID="question-choice-5-selected"
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "rgba(0, 0, 0, 0.1)",
            "borderRightWidth": 1,
            "height": "100%",
            "width": "25%",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingLeft": 16,
            "paddingRight": 8,
            "paddingVertical": 24,
          },
          false,
          Object {
            "backgroundColor": "#00B0FF",
            "borderColor": "#00B0FF",
          },
        ]
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "fontWeight": "700",
                }
              }
            >
              Option 5
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots QuestionChoice Selected 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        },
      ]
    }
    testID="question-choice-2-selected"
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingLeft": 16,
            "paddingRight": 8,
            "paddingVertical": 24,
          },
          false,
          Object {
            "backgroundColor": "#00B0FF",
            "borderColor": "#00B0FF",
          },
        ]
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "fontWeight": "700",
                }
              }
            >
              Option 2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots QuestionChoice Selected with image 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        },
      ]
    }
    testID="question-choice-4-selected"
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "rgba(0, 0, 0, 0.1)",
            "borderRightWidth": 1,
            "height": "100%",
            "width": "25%",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingLeft": 16,
            "paddingRight": 8,
            "paddingVertical": 24,
          },
          false,
          Object {
            "backgroundColor": "#00B0FF",
            "borderColor": "#00B0FF",
          },
        ]
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "fontWeight": "700",
                }
              }
            >
              Option 4
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots QuestionChoice Squeezed 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        },
      ]
    }
    testID="question-choice-3"
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingLeft": 16,
            "paddingRight": 8,
            "paddingVertical": 24,
          },
          Object {
            "flex": 0,
            "padding": 16,
            "paddingLeft": undefined,
            "paddingRight": undefined,
            "paddingVertical": undefined,
          },
          false,
        ]
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 13,
                  "fontWeight": "700",
                }
              }
            >
              A Squeezed Question Choices
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots QuestionChoice With image 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#FFFFFF",
          "borderColor": "rgba(0, 0, 0, 0.1)",
          "borderRadius": 3,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "overflow": "hidden",
        },
      ]
    }
    testID="question-choice-3"
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "rgba(0, 0, 0, 0.1)",
            "borderRightWidth": 1,
            "height": "100%",
            "width": "25%",
          },
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingLeft": 16,
            "paddingRight": 8,
            "paddingVertical": 24,
          },
          false,
          false,
        ]
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 15,
                  "fontWeight": "700",
                }
              }
            >
              A very very very long long long long long long long long long long long long long long long long text
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
